SUBDIRS = oc2sec sec2ts sec2mpe zpipe tsfilter tsloop tsmodder tsnullfiller \
	tsnullshaper tspcrmeasure tspidmapper esaudio2pes esaudioinfo \
	esvideo2pes esvideoinfo pes2es pesaudio2ts pesvideo2ts pesinfo \
	tsstamp ts2pes mpe2sec tscbrmuxer vbv tstdt i13942ts tsvbr2cbr \
	tsfixcc tsudpreceive tsudpsend dsmcc-receive pesclock tspcrstamp \
	tstcpreceive tstcpsend tstimeout tstimedwrite tsinputswitch \
	tsdoubleoutput pes2txt tsoutputswitch totsectionrestamp tsccc \
	txt2pes pesdata2ts

